--- a/캡스톤 기말과제.md
+++ b/캡스톤 기말과제.md
@@ -3,3 +3,10 @@
 <img width="" height="" src="./png/로그인페이지.PNG"></img>
 
 <img width="" height="" src="./png/메인페이지.PNG"></img>
+
+
+#깃허그 장점
+
+깃허그를 사용이 아직은 조금 복잡하지만
+실수로 소스가 모두 날아가도 복구가 용이하며, 모든 기록이 남게 되고
+나만의 포토폴리오로 활용하기에 좋은것 같다.
